# port-monitor

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  project.yml  pyproject.toml  release-please-config.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: bump_version.py  create_release.py
.github/workflows/: build.yml  ci.yml  release-please.yml  release.yml  test.yml
PortMonitor/: AppDelegate.swift  Info.plist  PortMonitorApp.swift
PortMonitor.xcodeproj/: project.pbxproj
PortMonitor/Models/: PortEntry.swift
PortMonitor/Scanner/: AppSettings.swift  PortScanner.swift
PortMonitor/Views/: PopoverView.swift  PortRowView.swift  SettingsView.swift
PortMonitorTests/: PortMonitorTests.swift  PortScannerTests.swift
docs/superpowers/plans/: 2026-04-25-port-monitor-rewrite.md
docs/superpowers/specs/: 2026-04-25-port-monitor-rewrite-design.md
packaging/: build_dmg.sh  build_icon.py  launcher.py  port-monitor.icns  port-monitor.spec
packaging/linux/: port-monitor.desktop
packaging/macos/: Info.plist  build-app.sh
src/: App.svelte  PortRow.svelte  SettingsView.svelte  app.rs  autostart.rs  lib.rs  main.rs  main.ts  scanner.rs  state.rs  styles.css  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/port_enum/: assemble.rs  filter.rs  kill.rs  mod.rs  source.rs  types.rs
src-tauri/tests/: kill_test.rs
src/lib/: api.ts
src/port_enum/: filter.rs  list.rs  mod.rs  types.rs
src/port_monitor/: app.py  monitor.py  ports.py  types.py
src/port_monitor/ui/: popover.py
src/ui/: main_view.rs  mod.rs  row.rs  settings_view.rs
tests/: port_enum_test.rs  test_monitor.py  test_ports.py
