[package]
name = "port-monitor"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Cross-platform menu-bar app to list and kill processes on listening TCP ports"
license = "MIT"

[lib]
name = "port_monitor"
path = "src/lib.rs"

[[bin]]
name = "port-monitor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
whoami = "1"
dark-light = "1"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
tray-icon = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
netstat2 = "0.9"
sysinfo = "0.30"
auto-launch = "0.5"
crossbeam-channel = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

# Pin libc: netstat2 0.9.1 breaks against libc >= 0.2.156 (`__be16` ambiguity, missing tcp_info::state field).
[target.'cfg(target_os = "linux")'.dependencies]
libc = "=0.2.155"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[dev-dependencies]
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "s"
