[package]
name = "port-monitor"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
description = "Cross-platform menu-bar app to list and kill processes on listening TCP ports"
license = "MIT"

# Keep the crate name `port_monitor` so the integration tests
# (tests/*.rs use `port_monitor::port_enum::…`) and the Tauri entry point
# both link against one library.
[lib]
name = "port_monitor"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "port-monitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
netstat2 = "0.9"
sysinfo = "0.30"
whoami = "1"
confy = "0.6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

# Pin libc: netstat2 0.9.1 breaks against libc >= 0.2.156 on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "=0.2.155"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[dev-dependencies]
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "s"
